Fix member wrapper align

--- a/css/main.scss
+++ b/css/main.scss
@@ -273,9 +273,9 @@ ul {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
-  place-items: center;
   width: 100%;
   padding-bottom: 5rem;
+  justify-content: center;
 }
 
 .member-item {
